selfhost/test/typechecker/map/error_type_mismatch_bindingdecl.1.out
Error at %FILE_NAME%:1:34
Type mismatch
  |  val m: Map<String, Int[]> = { a: 123 }
                                      ^
Expected: Int[]
but instead found: Int
