selfhost/test/typechecker/map/error_type_mismatch_bindingdecl.1.abra
val m: Map<String, Int[]> = { a: 123 }